2006-03-14   Ping Cheng <pingc@wacom.com>
	* Fixed a relative distance bug in wcmCommon.c
	* Reday to release 0.7.3 as beta

2006-03-06   Ping Cheng <pingc@wacom.com>
	* Fixed a Volito bug (Kirill Frolov)
	* Fixed a xsetwacom.c typo 
	* Supporting tablet attach/detach while X driver running (Christian Lupien) 
	* Remove SYSCALL from xf86 calls (Christian Lupien)
	* Swapped USB tablet wheel directions (Christian Lupien)

2006-02-27   Ping Cheng <pingc@wacom.com>
	* Updated website
	* Support 2.6.15
	* Fixed a Graphire 2 issue

2006-02-11   Ping Cheng <pingc@wacom.com>
	* Updated website
	* Added DTF 521, I3 12x12, and I3 12x19

2006-01-09   Ping Cheng <pingc@wacom.com>
	* Restructured the website
	* Added a page for Tablet PC 
	* Added a mini-HOWTO page for Fedora Core 4
	* Updated application developers' page

2005-12-21   Ping Cheng <pingc@wacom.com>
        * Updated website
	* Released 0.7.2

2005-12-16   Ping Cheng <pingc@wacom.com>
	* updated configure.in and acinclude.m4 to use system info
	  to decide wacom_drv default module and etc. 
	* Removed evdev.c in src/2.6.x
	* Updated configure scripts and src/2.6.x/Makefile.in 
	  to remove evdev from building string

2005-12-05   Ping Cheng <pingc@wacom.com>
	* Updated README and NEWS
	* Modified configure.in

2005-12-02   Ping Cheng <pingc@wacom.com>
	* Send EVIOCGRAB ioctl to kernel in wcmUSB.c (Christian Lupien)
	* Removed mousedev.c and usbmouse.c in src/2.6.x 
	  since wacom takes whole control of the tablet now
	* Updated configure scripts and src/2.6.x/Makefile.in 
	  to remove mousedev and usbmouse from building string

2005-11-22   Ping Cheng <pingc@wacom.com>
	* linuxwacom-0.7.1-1 released
	* Fixed a dual monitor display issue

2005-11-18   Ping Cheng <pingc@wacom.com>
	*  Fixed a wacomcpl and an X driver bug

2005-11-17   Ping Cheng <pingc@wacom.com>
	* Updated wacomcpl
	* Updated wacom.c and xsetwacom

2005-11-14   Ping Cheng <pingc@wacom.com>
	* Updated xidump
	* Support 2.6.14